test/parse-errors/need-block-context.nz.ast.tata
file-ast(
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(range(0, 8), f, inststruct(range(2, 6), name-range(2, void)), [])
			body: seq-ast(
				seq-ast(
					if(bogus, literal(numeric, "0"), some(literal(numeric, "1")))
					match(
						bogus
						[
							case(range(44, 57), name-range(47, some), none, literal(numeric, "0"))
							case(range(57, 70), name-range(60, none), none, literal(numeric, "1"))]))
				match(bogus, [])))])
